--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -23,3 +23,5 @@
 
 
 <% keywords 'World Cup, Premier League, La Liga, Cups, Leagues, Highlights, gifs, Gfycat, soccer, football, goals, goal, Liverpool, Barcelona, Real Madrid, Manchester United, Chelsea, Arsenal' %>
+
+<% description 'Your home for #{@team.name}, check out all #{@team.name} goals and stay up to date on your favorite players.' %>
