fixed links and added cl

--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -18,7 +18,7 @@
 			<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog"></div>
 	    </div>
 	    <h2>
-			<%= link_to "Can't Find it? Add Your Favorite League", new_user_registration_path %>
+			<%= link_to "Can't Find it? Add Your Favorite League", new_goal_path %>
 		</h2>
 	</div>
 			</div>
