--- a/app/views/elements/_navbar.html.erb
+++ b/app/views/elements/_navbar.html.erb
@@ -53,6 +53,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">LEAGUES AND CUPS<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Premier League", competition_path(8) %></li>
+              <li><%= link_to "Champions League", competition_path(14) %></li>
               <li><%= link_to "La Liga", competition_path(4) %></li>
               <li><%= link_to "Bundesliga", competition_path(2) %></li>
               <li><%= link_to "World Cup", competition_path(16) %></li>
