--- a/app/views/teams/national.html.erb
+++ b/app/views/teams/national.html.erb
@@ -17,7 +17,7 @@
 			<div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog"></div>
 	    </div>
 	    <h2>
-			<%= link_to "Can't Find it? Add Your Favorite Team", new_user_registration_path %>
+			<%= link_to "Can't Find it? Add Your Favorite Team", new_goal_path %>
 		</h2>
 	</div>
 			</div>
