--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1630,6 +1630,8 @@ a.scrollup{
   padding:10px;
   margin: 5px;
   max-width: 440px;
+  min-width: 300px;
+  min-height: 250px;
 }
 
 .goal.box.innerbox{
