--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -3,7 +3,7 @@
           <% if @query.blank? %>
             <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4"><%= title "Search Your Favorite Teams and Players" %></h1>
           <% else %>
-            <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4"><%= title "Seach results for #{@query}" %></h1>
+            <h1 class="text-center color-green txt-regular col-md-4 col-md-offset-4"><%= title "Search results for #{@query}" %></h1>
           <% end %>
           <!-- <div class="filterbox col-md-2 col-md-offset-2">
               <select class="filter">
