--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1629,6 +1629,7 @@ a.scrollup{
   line-height: 27px;
   padding:10px;
   margin: 5px;
+  width: 100%;
   max-width: 440px;
   min-width: 300px;
   min-height: 250px;
@@ -1915,4 +1916,18 @@ li.display-none{display:none;}
 }
 .tab-pane{
   padding:15px;
+}
+
+.gfySize{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.gfySize > div{
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
