--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -9,7 +9,7 @@
 
 
 
-<p>Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place.</p>
+<p>Our website is currently under development, so please <a href="mailto:info@goalopedia.com" target="_blank">contact us</a> with suggestions on how to make Goalopedia a better place. Thank you for helping us reach our goals!</p>
 
 </div>
 </section>
