--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   	<%= favicon_link_tag 'favicon.ico' %>
   	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  	<script type"text/javascript" src="http://test.gfycat.com/gfycat_test_may18.js"></script>
+  	<script type"text="" javascript"="" src="https://assets.gfycat.com/gfycat.js"></script>
   	<%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link href='http://fonts.googleapis.com/css?family=Nunito:300,400,700' rel='stylesheet' type='text/css'>
